--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@ function initGame(){
   // Input
   document.removeEventListener("keydown", handleKeyDown);
   document.removeEventListener("keyup", handleKeyUp);
+  document.removeEventListener("mousedown", handleMouseDown);
+  document.removeEventListener("mouseup", handleMouseUp);
   document.getElementById('playAgainBtn').removeEventListener('click', resetGame);
   window.removeEventListener('resize', resizeCanvas);
 
   document.addEventListener("keydown", handleKeyDown);
   document.addEventListener("keyup", handleKeyUp);
+  document.addEventListener("mousedown", handleMouseDown);
+  document.addEventListener("mouseup", handleMouseUp);
   document.getElementById('playAgainBtn').addEventListener('click', resetGame);
   window.addEventListener('resize', resizeCanvas);
 
@@ -93,7 +97,16 @@ function handleKeyDown(e){
     player.jumpFrameCount = 0;
   }
 }
+function handleMouseDown(e){
+  if(player.onGround && gameRunning){
+    player.dy = player.jumpPower;
+    player.onGround = false;
+    player.isJumping = true;
+    player.jumpFrameCount = 0;
+  }
+}
 function handleKeyUp(e){ if((e.code==="Space"||e.code==="ArrowUp") && player.isJumping) player.isJumping=false; }
+function handleMouseUp(e){ if(player.isJumping) player.isJumping=false; }
 
 function resizeCanvas(){
   if(canvas){ canvas.width = window.innerWidth; canvas.height = window.innerHeight;
