--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@ function initGame(){
   // Input
   document.removeEventListener("keydown", handleKeyDown);
   document.removeEventListener("keyup", handleKeyUp);
-  document.removeEventListener("mousedown", handleMouseDown);
-  document.removeEventListener("mouseup", handleMouseUp);
+  document.removeEventListener("mousedown", handleKeyDown);
+  document.removeEventListener("mouseup", handleKeyUp);
   document.getElementById('playAgainBtn').removeEventListener('click', resetGame);
   window.removeEventListener('resize', resizeCanvas);
 
   document.addEventListener("keydown", handleKeyDown);
   document.addEventListener("keyup", handleKeyUp);
-  document.addEventListener("mousedown", handleMouseDown);
-  document.addEventListener("mouseup", handleMouseUp);
+  document.addEventListener("mousedown", handleKeyDown);
+  document.addEventListener("mouseup", handleKeyUp);
   document.getElementById('playAgainBtn').addEventListener('click', resetGame);
   window.addEventListener('resize', resizeCanvas);
 
@@ -90,23 +90,25 @@ function initGame(){
 }
 
 function handleKeyDown(e){
-  if((e.code==="Space"||e.code==="ArrowUp") && player.onGround && gameRunning){
+  if (e.type === "keydown" && !(e.code === "Space" || e.code === "ArrowUp")) {
+    return;
+  }
+  if (player.onGround && gameRunning) {
     player.dy = player.jumpPower;
     player.onGround = false;
     player.isJumping = true;
     player.jumpFrameCount = 0;
   }
 }
-function handleMouseDown(e){
-  if(player.onGround && gameRunning){
-    player.dy = player.jumpPower;
-    player.onGround = false;
-    player.isJumping = true;
-    player.jumpFrameCount = 0;
+
+function handleKeyUp(e){ 
+  if (e.type === "keydown" && !(e.code === "Space" || e.code === "ArrowUp")) {
+    return;
+  }
+  if (player.isJumping) {
+    player.isJumping=false;   
   }
 }
-function handleKeyUp(e){ if((e.code==="Space"||e.code==="ArrowUp") && player.isJumping) player.isJumping=false; }
-function handleMouseUp(e){ if(player.isJumping) player.isJumping=false; }
 
 function resizeCanvas(){
   if(canvas){ canvas.width = window.innerWidth; canvas.height = window.innerHeight;
