--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Infinite Platformer - Spike Clusters & High Score</title>
+<title>Infinite Platformer - Leon & High Score</title>
 <style>
   body { margin:0; overflow:hidden; background:linear-gradient(to bottom,#87CEEB,#E0F7FA); font-family:'Arial Rounded MT Bold','Arial',sans-serif;}
   canvas{display:block;}
@@ -245,3 +245,4 @@ window.onload=initGame;
 </script>
 </body>
 </html>
+
